--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 </head>
 <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
 
     <script src="script.js"></script>
 </body>
